docs/terminal.css
#terminalWindow {
    margin: auto;
    width: 700px;
    min-width: 700px;
    min-height: 450px;
    overflow: auto;
    resize: both;
    font-family: "Inconsolata", monospace;
    border-radius: 5px;
    border: 1px solid #ccc;
    position: relative;
    display: flex;
    flex-direction: column;
}

#titleBar {
    padding: 1px 5px;
    background-color: #dcdcdc;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}
#titleTitle {
    text-align: center;
}
#titleButtons {
    position: absolute;
}
#titleButtons span {
    display: inline-block;
    height: 11px;
    width: 11px;
    border-radius: 50%;
}

#terminal {
    background-color: #323232;
    color: #fff;
    padding: 1px 3px;
    cursor: default;
    flex-grow: 1;
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
}
#terminal::-webkit-scrollbar {
    display: none;
}
.commandOutput {
    white-space: pre-wrap;
}
#terminalInput {
    display: flex;
}
#commandPath {
    white-space: pre;
}
#commandInput {
    background-color: transparent;
    border: none;
    color: inherit;
    font-family: inherit;
    font-size: inherit;
    outline: none;
    cursor: inherit;
    width: 100%;
    padding: 0;
    margin: 0;
}

